--- a/style.css
+++ b/style.css
@@ -152,3 +152,88 @@ footer span {
 .icon-rabbit {
   background-position: -192px;
 }
+
+/* Form Card */
+
+#form-card {
+  margin-top: 20px;
+}
+
+#form-card .card-section {
+  text-align: left;
+  padding-left: 20px;
+}
+
+#form-card .card-section input {
+  line-height: 1.5rem;
+}
+
+#form-card .card-section label {
+  display: block;
+  color: var(--paragraph-color);
+  margin-bottom: 0.3em;
+}
+
+#form-card .card-section input[type="text"] {
+  display: block;
+  height: 40px;
+  width: 100%;
+  max-width: 300px;
+  border-radius: var(--border-radius);
+  border: 1px solid #888;
+  padding-left: 0.5em;
+  font-family: inherit;
+}
+
+#form-card .card-section input[type="submit"] {
+  margin-top: 1em;
+  appearance: none;
+  height: 40px;
+  padding-left: 4em;
+  padding-right: 4em;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  background: #64cddb;
+  font-family: inherit;
+  outline: 0;
+  border: 0;
+  color: #fff;
+  font-weight: bold;
+  border-bottom: 4px solid #38bed3;
+}
+
+#form-card .card-section input[type="submit"][disabled] {
+  border: 1px solid #ddd;
+  cursor: inherit;
+}
+
+.field {
+  margin-bottom: 1em;
+}
+
+select {
+  height: 40px;
+  padding-left: 0.5em;
+  padding-right: 2em;
+  width: 150px;
+  border-radius: var(--border-radius);
+  border: 1px solid #888;
+  font-family: inherit;
+  appearance: none;
+}
+.select-container {
+  position: relative;
+  display: inline-block;
+}
+.select_arrow {
+  position: absolute;
+  right: 0.3em;
+  top: 0.3em;
+}
+::placeholder {
+  color: #bbb;
+}
+
+#form-card input.error {
+  border: 1px solid red;
+}
